# offshoreleaks-visualizer

./: .env.sample  .gitignore  README.md  docker-compose.override.yml  docker-compose.yml
backend/: README.md  backend.dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/endpoints/: address.py  entity.py  intermediary.py  officer.py  other.py  util.py
backend/app/core/: config.py
backend/app/db/: db.py  util.py
backend/app/models/: address.py  entity.py  intermediary.py  nodeutils.py  officer.py  other.py
backend/app/schema/: __init__.py  address.py  entity.py  intermediary.py  officer.py  osl.py  other.py  react_force_graph.py
db/neo4j/: README.md
db/neo4j/conf/: neo4j.conf
db/neo4j/import/: init-neo4j.sh  paradise_papers.edges.csv  paradise_papers.nodes.address.csv  paradise_papers.nodes.entity.csv  paradise_papers.nodes.intermediary.csv  paradise_papers.nodes.officer.csv  paradise_papers.nodes.other.csv
frontend/: frontend.dockerfile  package-lock.json  package.json
frontend/src/: index.js
frontend/src/api/: addressApi.js  entityApi.js  intermediaryApi.js  officerApi.js  otherApi.js
frontend/src/components/: Graph2D.jsx  entityApi.jsx
frontend/src/config/: settings.js
frontend/src/pages/: Entity.jsx  Home.jsx
